# TestTask

./: CMakeLists.txt  main.cpp
entities/: Company.h  Schedule.h
processors/: ScheduleProcessor.cpp  ScheduleProcessor.h
readers/: ScheduleReader.cpp  ScheduleReader.h
utils/: Time.cpp  Time.h
writers/: ScheduleWriter.cpp  ScheduleWriter.h
